Add automated API testing suite and service fixes